Fixed restaurant header alignment

--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -196,7 +196,7 @@ figure {
 
   border-radius: 40px 40px 0 0;
 
-  padding: 0 20px 0 5px;
+  padding: 0 20px 0 20px;
 
   i {
     font-size: 25px;
